--- a/README.org
+++ b/README.org
@@ -5,8 +5,8 @@
   This library implements universal PID controller class on Arduino platform.
   It is a partial rewrite of Arduino PID Library by Brett Beauregard <br3ttb@gmail.com>.
   What's different:
-** Exposed errors
-** pid_config struct with all the tuning values
-** Deadband and dead interval support
-** Improved code readability
+- Exposed errors
+- pid_config struct with all the tuning values
+- Deadband and dead interval support
+- Improved code readability
 * TODO Examples
